@@ -1,6 +1,6 @@
 Date: 2020-08-15
 Package: CHNOSZ
-Version: 1.3.6-71
+Version: 1.3.6-72
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
